--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,24 +7,16 @@
     tools:context="com.example.x190629.testes_geofence.MainActivity">
 
     <TextView
-        android:id="@+id/txt_label_localizacao"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Localização atual"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
         android:id="@+id/txt_localizacao"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="000, 000"
+        android:scrollHorizontally="false"
+        android:maxLines="5"
+        android:inputType="textMultiLine"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_label_localizacao"
-        app:layout_constraintVertical_bias="0.2" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
