--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,16 @@
     android:layout_height="match_parent"
     tools:context="com.example.x190629.testes_geofence.MainActivity">
 
+    <Button
+        android:id="@+id/btn_getlocation"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@id/txt_localizacao"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:text="Obter localização"/>
+
     <TextView
         android:id="@+id/txt_localizacao"
         android:layout_width="wrap_content"
