--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,24 +6,53 @@
     android:layout_height="match_parent"
     tools:context="com.example.x190629.testes_geofence.MainActivity">
 
-    <Button
-        android:id="@+id/btn_getlocation"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@id/txt_localizacao"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:text="Obter localização"/>
+        android:orientation="vertical"
+        android:gravity="center">
+        <Button
+            android:id="@+id/btn_getlocation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Obter localização"
+            app:layout_constraintBottom_toTopOf="@id/txt_localizacao"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal"
+            app:layout_constraintBottom_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/btn_getlocation">
+
+            <Button
+                android:id="@+id/btn_add_bcp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Add BCP" />
+
+            <Button
+                android:id="@+id/btn_remove_bcp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Remove BCP" />
+        </LinearLayout>
+    </LinearLayout>
 
     <TextView
         android:id="@+id/txt_localizacao"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="000, 000"
-        android:scrollHorizontally="false"
-        android:maxLines="15"
         android:inputType="textMultiLine"
+        android:maxLines="15"
+        android:scrollHorizontally="false"
+        android:text="000, 000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
